--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Idea specs #
 ###################
 .idea
-BasicSchemeInterpreter/.idea
-BasicSchemeInterpreter/BasicSchemeInterpreter.iml
+./simplelanguage.iml
+./graalvm/*
 
 # Compiled source #
 ###################
