--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,6 @@
 			<version>0.30</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>com.beust</groupId>
@@ -57,6 +51,11 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
 		</dependency>
 	</dependencies>
 
@@ -138,6 +137,9 @@
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
+						<compilerArgs>
+							<arg>-Xbootclasspath/a:/home/jn/run/gitk/MI-RUN/graalvm/jre/lib/truffletruffle-api.jar:/home/jn/run/gitk/MI-RUN/graalvm/jre/lib/trufflelocator.jar:/home/jn/run/gitk/MI-RUN/graalvm/jre/lib/truffle/truffle-nfi.jar</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 			</plugins>
